# PyCalcLab

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api_reference.md  installation.md
examples/: basic_usage.py  engineering_calculations.py
src/pycalclab/: __init__.py  basic.py  logarithmic.py  matrix_ops.py  trigonometric.py  unit_converter.py
tests/: __init__.py  test_basic.py  test_unit_converter.py
